2016-09-15   1.3.4:
-------------------
  * add -s option to shell installer to run without executing user-defined
    scripts, basically #44
  * allow NSIS 3 to be used to Windows


2016-09-12   1.3.3:
-------------------
  * add support for 'noarch' packages


2016-08-11   1.3.2:
-------------------
  * bug: allow '-' in package name, when using 'exlcude' key


2016-07-19   1.3.1:
-------------------
  * add pkgs/urls.txt to be compatible with current conda
  * add 'md5' and 'installed_by' keys to conda-meta/<dist>.json metadata
    for installed packages


2016-07-08   1.3.0:
-------------------
  * add ability to run `post-link` scripts (inside conda packages) on Windows
  * add ability to run post install `.bat` scripts on Windows
  * improve install logic on Unix, replace post.py by custom install.py,
    which is independent of conda
  * remove dependency on conda, we now use libconda, which also means that
    constructor can be installed into a non-root environment


2016-06-24   1.2.1:
-------------------
  * compatibility with conda 4.1, see #26
  * include urls.txt in the pkgs, #27
  * skip machine type check in batch mode (Unix)


2016-04-07   1.2.0:
-------------------
  * ensure empty lists are handled correctly with selectors
  * add keep_pkgs option to construct.yaml


2016-03-24   1.1.0:
-------------------
  * add support for pre and post install scripts on Unix
  * fix issues related to non x86 platforms
  * add default_prefix support for Windows, see #7 and #14


2016-03-02   1.0.0:
-------------------
  * initial release