@@ -1,1 +1,1 @@
-__version__ = '1.3.4'
+__version__ = '1.4.0'
